@@ -7,8 +7,6 @@ import net.minecraft.world.entity.ai.attributes.AttributeModifier;
 import net.minecraftforge.common.ForgeConfigSpec;
 import net.minecraftforge.registries.ForgeRegistries;
 import net.minecraftforge.registries.IForgeRegistryEntry;
-import org.antlr.v4.runtime.misc.Pair;
-import org.antlr.v4.runtime.misc.Triple;
 
 import java.util.ArrayList;
 import java.util.Collection;
@@ -17,54 +15,17 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 public final class ConfigUtil {
-    public static <T extends IForgeRegistryEntry<T>, U> LinkedHashMap<T, U> getMap(ForgeConfigSpec.ConfigValue<List<String>> list, Collection<? extends T> registry, Function4<String, String, String, Predicate<U>, U> parserU, Predicate<U> predicateU) {
+    public static <T extends IForgeRegistryEntry<T>, U> LinkedHashMap<T, U> getMap(ForgeConfigSpec.ConfigValue<List<? extends String>> list, Collection<? extends T> registry, Function4<String, String, String, Predicate<U>, U> parserU, Predicate<U> predicateU) {
         LinkedHashMap<T, U> map = new LinkedHashMap<>();
         for (String s : list.get()) {
             String[] array = split(s, 2, list);
             if (array == null) continue;
             U u = parserU.apply(array[1], s, getPath(list.getPath()), predicateU);
             if (u == null) continue;
-            for (T t : registry.stream().filter(e -> e.getRegistryName().toString().matches(array[0])).collect(Collectors.toList())) {
+            for (T t : registry.stream().filter(e -> e.getRegistryName().toString().matches(array[0])).toList()) {
                 map.put(t, u);
-                logProperty(getLast(list.getPath()), t, u);
-            }
-        }
-        return map;
-    }
-
-    public static <T extends IForgeRegistryEntry<T>, U, V> LinkedHashMap<T, Pair<U, V>> pairMap(ForgeConfigSpec.ConfigValue<List<String>> list, Collection<? extends T> registry, Function4<String, String, String, Predicate<U>, U> parserU, Predicate<U> predicateU, Function4<String, String, String, Predicate<V>, V> parserV, Predicate<V> predicateV) {
-        LinkedHashMap<T, Pair<U, V>> map = new LinkedHashMap<>();
-        for (String s : list.get()) {
-            String[] array = split(s, 3, list);
-            if (array == null) continue;
-            U u = parserU.apply(array[1], s, getPath(list.getPath()), predicateU);
-            if (u == null) continue;
-            V v = parserV.apply(array[2], s, getPath(list.getPath()), predicateV);
-            if (v == null) continue;
-            for (T t : registry.stream().filter(e -> e.getRegistryName().toString().matches(array[0])).collect(Collectors.toList())) {
-                map.put(t, new Pair<>(u, v));
-                logProperty(getLast(list.getPath()), t, u);
-            }
-        }
-        return map;
-    }
-
-    public static <T extends IForgeRegistryEntry<T>, U, V, W> LinkedHashMap<T, Triple<U, V, W>> tripleMap(ForgeConfigSpec.ConfigValue<List<String>> list, Collection<? extends T> registry, Function4<String, String, String, Predicate<U>, U> parserU, Predicate<U> predicateU, Function4<String, String, String, Predicate<V>, V> parserV, Predicate<V> predicateV, Function4<String, String, String, Predicate<W>, W> parserW, Predicate<W> predicateW) {
-        LinkedHashMap<T, Triple<U, V, W>> map = new LinkedHashMap<>();
-        for (String s : list.get()) {
-            String[] array = split(s, 4, list);
-            if (array == null) continue;
-            U u = parserU.apply(array[1], s, getPath(list.getPath()), predicateU);
-            if (u == null) continue;
-            V v = parserV.apply(array[2], s, getPath(list.getPath()), predicateV);
-            if (v == null) continue;
-            W w = parserW.apply(array[3], s, getPath(list.getPath()), predicateW);
-            if (w == null) continue;
-            for (T t : registry.stream().filter(e -> e.getRegistryName().toString().matches(array[0])).collect(Collectors.toList())) {
-                map.put(t, new Triple<>(u, v, w));
                 logProperty(getLast(list.getPath()), t, u);
             }
         }
@@ -99,7 +60,7 @@ public final class ConfigUtil {
         Logger.info("Set " + value + " for " + entry.getRegistryName().toString() + " to " + newValue);
     }
 
-    public static String[] split(String string, int length, ForgeConfigSpec.ConfigValue<List<String>> config) {
+    public static String[] split(String string, int length, ForgeConfigSpec.ConfigValue<List<? extends String>> config) {
         String[] array = string.split(";");
         if (array.length != length) {
             Logger.error("Entry " + string + " in " + getPath(config.getPath()) + " is invalid, needs " + length + " entries separated by semicolons");
@@ -108,7 +69,7 @@ public final class ConfigUtil {
         return array;
     }
 
-    public static HashMap<EntityType<?>, Map<Attribute, List<AttributeModifier>>> parseAttributeList(ForgeConfigSpec.ConfigValue<List<String>> config) {
+    public static HashMap<EntityType<?>, Map<Attribute, List<AttributeModifier>>> parseAttributeList(ForgeConfigSpec.ConfigValue<List<? extends String>> config) {
         HashMap<EntityType<?>, Map<Attribute, List<AttributeModifier>>> result = new HashMap<>();
         for (String s : config.get()) {
             String[] array = split(s, 4, config);
